--- a/Exploration corona.ipynb
+++ b/Exploration corona.ipynb
@@ -3426,6 +3426,342 @@
     "tmp_merge2 = tmp_merge1.merge(sum_environment_df, on = ['language', 'date'])\n",
     "final_merge = tmp_merge2.merge(cities_global_mobility_report, on = ['date', 'language'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "657d07f3-c29b-42f0-a60e-5f653f824a47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>views</th>\n",
+       "      <th>language</th>\n",
+       "      <th>date</th>\n",
+       "      <th>driving</th>\n",
+       "      <th>transit</th>\n",
+       "      <th>walking</th>\n",
+       "      <th>environment_views</th>\n",
+       "      <th>retail_and_recreation_percent_change_from_baseline</th>\n",
+       "      <th>grocery_and_pharmacy_percent_change_from_baseline</th>\n",
+       "      <th>parks_percent_change_from_baseline</th>\n",
+       "      <th>transit_stations_percent_change_from_baseline</th>\n",
+       "      <th>workplaces_percent_change_from_baseline</th>\n",
+       "      <th>residential_percent_change_from_baseline</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>32829116</td>\n",
+       "      <td>ja</td>\n",
+       "      <td>2020-02-15</td>\n",
+       "      <td>131.54</td>\n",
+       "      <td>128.41</td>\n",
+       "      <td>138.76</td>\n",
+       "      <td>152200</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37797411</td>\n",
+       "      <td>ja</td>\n",
+       "      <td>2020-02-16</td>\n",
+       "      <td>114.42</td>\n",
+       "      <td>114.64</td>\n",
+       "      <td>119.97</td>\n",
+       "      <td>174462</td>\n",
+       "      <td>-13.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-37.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>34293756</td>\n",
+       "      <td>ja</td>\n",
+       "      <td>2020-02-17</td>\n",
+       "      <td>111.43</td>\n",
+       "      <td>112.88</td>\n",
+       "      <td>122.2</td>\n",
+       "      <td>203263</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>32288981</td>\n",
+       "      <td>ja</td>\n",
+       "      <td>2020-02-18</td>\n",
+       "      <td>111.19</td>\n",
+       "      <td>112.02</td>\n",
+       "      <td>122.62</td>\n",
+       "      <td>190820</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>31509643</td>\n",
+       "      <td>ja</td>\n",
+       "      <td>2020-02-19</td>\n",
+       "      <td>112.58</td>\n",
+       "      <td>112.54</td>\n",
+       "      <td>124.25</td>\n",
+       "      <td>192859</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2059</th>\n",
+       "      <td>2297694</td>\n",
+       "      <td>fi</td>\n",
+       "      <td>2020-04-16</td>\n",
+       "      <td>76.8</td>\n",
+       "      <td>36.5</td>\n",
+       "      <td>61.08</td>\n",
+       "      <td>40512</td>\n",
+       "      <td>-51.0</td>\n",
+       "      <td>-18.0</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>-63.0</td>\n",
+       "      <td>-57.0</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2060</th>\n",
+       "      <td>2228006</td>\n",
+       "      <td>fi</td>\n",
+       "      <td>2020-04-17</td>\n",
+       "      <td>88.83</td>\n",
+       "      <td>40.39</td>\n",
+       "      <td>70.16</td>\n",
+       "      <td>37270</td>\n",
+       "      <td>-48.0</td>\n",
+       "      <td>-15.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>-61.0</td>\n",
+       "      <td>-55.0</td>\n",
+       "      <td>21.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2061</th>\n",
+       "      <td>2256041</td>\n",
+       "      <td>fi</td>\n",
+       "      <td>2020-04-18</td>\n",
+       "      <td>87.21</td>\n",
+       "      <td>37.89</td>\n",
+       "      <td>77.97</td>\n",
+       "      <td>21435</td>\n",
+       "      <td>-49.0</td>\n",
+       "      <td>-16.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>-59.0</td>\n",
+       "      <td>-25.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2062</th>\n",
+       "      <td>2195995</td>\n",
+       "      <td>fi</td>\n",
+       "      <td>2020-04-19</td>\n",
+       "      <td>86.59</td>\n",
+       "      <td>42.44</td>\n",
+       "      <td>80.01</td>\n",
+       "      <td>25610</td>\n",
+       "      <td>-46.0</td>\n",
+       "      <td>-19.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>-61.0</td>\n",
+       "      <td>-24.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2063</th>\n",
+       "      <td>2307050</td>\n",
+       "      <td>fi</td>\n",
+       "      <td>2020-04-20</td>\n",
+       "      <td>84.52</td>\n",
+       "      <td>46.86</td>\n",
+       "      <td>78.78</td>\n",
+       "      <td>42120</td>\n",
+       "      <td>-42.0</td>\n",
+       "      <td>-18.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>-58.0</td>\n",
+       "      <td>-55.0</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2064 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         views language       date driving transit walking  environment_views  \\\n",
+       "0     32829116       ja 2020-02-15  131.54  128.41  138.76             152200   \n",
+       "1     37797411       ja 2020-02-16  114.42  114.64  119.97             174462   \n",
+       "2     34293756       ja 2020-02-17  111.43  112.88   122.2             203263   \n",
+       "3     32288981       ja 2020-02-18  111.19  112.02  122.62             190820   \n",
+       "4     31509643       ja 2020-02-19  112.58  112.54  124.25             192859   \n",
+       "...        ...      ...        ...     ...     ...     ...                ...   \n",
+       "2059   2297694       fi 2020-04-16    76.8    36.5   61.08              40512   \n",
+       "2060   2228006       fi 2020-04-17   88.83   40.39   70.16              37270   \n",
+       "2061   2256041       fi 2020-04-18   87.21   37.89   77.97              21435   \n",
+       "2062   2195995       fi 2020-04-19   86.59   42.44   80.01              25610   \n",
+       "2063   2307050       fi 2020-04-20   84.52   46.86   78.78              42120   \n",
+       "\n",
+       "      retail_and_recreation_percent_change_from_baseline  \\\n",
+       "0                                                  -2.0    \n",
+       "1                                                 -13.0    \n",
+       "2                                                  -4.0    \n",
+       "3                                                  -2.0    \n",
+       "4                                                  -4.0    \n",
+       "...                                                 ...    \n",
+       "2059                                              -51.0    \n",
+       "2060                                              -48.0    \n",
+       "2061                                              -49.0    \n",
+       "2062                                              -46.0    \n",
+       "2063                                              -42.0    \n",
+       "\n",
+       "      grocery_and_pharmacy_percent_change_from_baseline  \\\n",
+       "0                                                   5.0   \n",
+       "1                                                  -9.0   \n",
+       "2                                                   3.0   \n",
+       "3                                                   3.0   \n",
+       "4                                                   2.0   \n",
+       "...                                                 ...   \n",
+       "2059                                              -18.0   \n",
+       "2060                                              -15.0   \n",
+       "2061                                              -16.0   \n",
+       "2062                                              -19.0   \n",
+       "2063                                              -18.0   \n",
+       "\n",
+       "      parks_percent_change_from_baseline  \\\n",
+       "0                                    9.0   \n",
+       "1                                  -37.0   \n",
+       "2                                   -2.0   \n",
+       "3                                    3.0   \n",
+       "4                                    8.0   \n",
+       "...                                  ...   \n",
+       "2059                                -4.0   \n",
+       "2060                                25.0   \n",
+       "2061                                54.0   \n",
+       "2062                                76.0   \n",
+       "2063                                63.0   \n",
+       "\n",
+       "      transit_stations_percent_change_from_baseline  \\\n",
+       "0                                               1.0   \n",
+       "1                                              -9.0   \n",
+       "2                                              -1.0   \n",
+       "3                                              -3.0   \n",
+       "4                                              -5.0   \n",
+       "...                                             ...   \n",
+       "2059                                          -63.0   \n",
+       "2060                                          -61.0   \n",
+       "2061                                          -59.0   \n",
+       "2062                                          -61.0   \n",
+       "2063                                          -58.0   \n",
+       "\n",
+       "      workplaces_percent_change_from_baseline  \\\n",
+       "0                                         4.0   \n",
+       "1                                        -1.0   \n",
+       "2                                         1.0   \n",
+       "3                                         0.0   \n",
+       "4                                        -1.0   \n",
+       "...                                       ...   \n",
+       "2059                                    -57.0   \n",
+       "2060                                    -55.0   \n",
+       "2061                                    -25.0   \n",
+       "2062                                    -24.0   \n",
+       "2063                                    -55.0   \n",
+       "\n",
+       "      residential_percent_change_from_baseline  \n",
+       "0                                          1.0  \n",
+       "1                                          3.0  \n",
+       "2                                          0.0  \n",
+       "3                                          1.0  \n",
+       "4                                          1.0  \n",
+       "...                                        ...  \n",
+       "2059                                      22.0  \n",
+       "2060                                      21.0  \n",
+       "2061                                       9.0  \n",
+       "2062                                       7.0  \n",
+       "2063                                      18.0  \n",
+       "\n",
+       "[2064 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60d414c8-05f5-4c74-b6f5-78d6dbcef903",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
