Update wikipedia views extension notebook

--- a/wikpedia_views_expansion.ipynb
+++ b/wikpedia_views_expansion.ipynb
@@ -179,21 +179,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'from selenium.common.exceptions import TimeoutException, ElementClickInterceptedException\\n\\nfor _, col in df_env.loc[3722584:].iterrows():\\n    title = col.loc[\"index\"]\\n    try:\\n        download(driver, title)\\n    except TimeoutException:\\n        print(\"Error with {}\".format(title))\\n    except ElementClickInterceptedException:\\n        print(\"Error with {}\".format(title))\\n\\n    rename(title.lower().replace(\":\", \"\").replace(\"?\", \"\").replace(\\'/\\', \\'_\\').replace(\\'\"\\', \"\"))'"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from selenium.common.exceptions import TimeoutException, ElementClickInterceptedException\n",
     "\n",
-    "for _, col in df_env.loc[3722584:].iterrows():\n",
+    "for _, col in df_env.iterrows():\n",
     "    title = col.loc[\"index\"]\n",
     "    try:\n",
     "        download(driver, title)\n",
@@ -205,7 +196,10 @@
     "    rename(title.lower().replace(\":\", \"\").replace(\"?\", \"\").replace('/', '_').replace('\"', \"\"))"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
